# App-LabRecorder

./: .appveyor.yml  .bintray.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  BUILD.md  CMakeLists.txt  Findliblsl.cmake  LabRecorder.cfg  LabRecorder_BIDS.cfg  LabRecorder_Legacy.cfg  README.md  app.entitlements  appveyor.yml  clirecorder.cpp  conversions.h  fptest.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recording.cpp  recording.h  test_xdf_writer.cpp  xdfwriter.cpp  xdfwriter.h
.github/workflows/: build.yaml  build.yml  cppcmake.yml  style.yaml
cmake/: MacOSXBundleInfo.plist.in
doc/: templates.md
res/: app.icns  app.rc
scripts/: sign_and_notarize.sh
src/: clirecorder.cpp  conversions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recording.cpp  recording.h  tcpinterface.cpp  tcpinterface.h  test_chunk7.cpp  test_xdf_writer.cpp  xdf_defs.h  xdfreader.h  xdfwriter.cpp  xdfwriter.h
xdfwriter/: CMakeLists.txt  test_iec559_and_little_endian.cpp
